# CUE4Parse

.github/workflows/: build.yml  build_natives.yml
CUE4Parse/: CUE4Parse.csproj
CUE4Parse-Conversion/: CUE4Parse-Conversion.csproj
CUE4Parse-Conversion/Animations/: AnimConverter.cs
CUE4Parse-Conversion/Animations/PSA/: CAnimTrack.cs  FAnimationRuntime.cs  FCompactPose.cs
CUE4Parse-Conversion/Meshes/: MeshConverter.cs
CUE4Parse-Conversion/Meshes/PSK/: CMeshSection.cs
CUE4Parse-Conversion/Meshes/glTF/: Gltf.cs  VertexColorXTextureX.cs
CUE4Parse-Natives/: CMakeLists.txt
CUE4Parse-Natives/ACL/: ACL.cpp
CUE4Parse.Example/: CUE4Parse.Example.csproj  Exporter.cs
CUE4Parse.Tests/: CUE4Parse.Tests.csproj  CityHashTests.cs  Shared.cs
CUE4Parse/Compression/: OodleHelper.cs
CUE4Parse/Encryption/Aes/: Aes.cs
CUE4Parse/FileProvider/: AbstractFileProvider.cs
CUE4Parse/FileProvider/Objects/: GameFile.cs  OsGameFile.cs  StreamedGameFile.cs  VfcGameFile.cs
CUE4Parse/FileProvider/Vfs/: AbstractVfsFileProvider.cs  FileProviderDictionary.cs
CUE4Parse/GameTypes/ABI/UE4/Pak/: ABIPakFileReader.cs
CUE4Parse/GameTypes/AoC/Objects/: FakePackage.cs
CUE4Parse/GameTypes/AshEchoes/FileProvider/: AshEchoesDefaultFileProvider.cs
CUE4Parse/GameTypes/DQXI/Encryption/: DQXIpakFileReader.cs
CUE4Parse/GameTypes/FN/Assets/Exports/: ULevelSaveRecord.cs
CUE4Parse/GameTypes/HonorOfKings/Vfs/: HoKdbFileReader.cs
CUE4Parse/GameTypes/MarvelRivals/: MarvelRivalsVersions.cs
CUE4Parse/GameTypes/Misc/UE4/Paks/: PartialEncryptionPakFileReader.cs
CUE4Parse/GameTypes/PUBG/UE4/Pak/: GameForPeacePakFileReader.cs
CUE4Parse/GameTypes/Rennsport/Encryption/Aes/: RennsportAes.cs
CUE4Parse/GameTypes/Rennsport/Pak/: RennsportPakFileReader.cs
CUE4Parse/MappingsProvider/: MappingsSchema.cs
CUE4Parse/UE4/AssetRegistry/Objects/: FAssetPackageData.cs  FStore.cs
CUE4Parse/UE4/Assets/: AbstractUePackage.cs  ExportInfo.cs  IPackage.cs  IoPackage.cs  Package.cs
CUE4Parse/UE4/Assets/Exports/: UObject.cs
CUE4Parse/UE4/Assets/Exports/Animation/: AnimCurveCompressionCodec_CompressedRichCurve.cs
CUE4Parse/UE4/Assets/Exports/Component/: ActorComponent.cs
CUE4Parse/UE4/Assets/Exports/Engine/: UDataTable.cs
CUE4Parse/UE4/Assets/Exports/Internationalization/: FStringTable.cs
CUE4Parse/UE4/Assets/Exports/SkeletalMesh/: FSkeletalMaterial.cs
CUE4Parse/UE4/Assets/Objects/: FInstancedStruct.cs  FPropertyTag.cs  FStructFallback.cs
CUE4Parse/UE4/Assets/Objects/Properties/: FPropertyTagType.cs
CUE4Parse/UE4/Assets/Utils/: StructFallbackUtil.cs
CUE4Parse/UE4/Exceptions/: ParserException.cs
CUE4Parse/UE4/IO/: IoChunkToc.cs  IoStoreEntryStream.cs  IoStoreOnDemandReader.cs  IoStoreReader.cs
CUE4Parse/UE4/IO/Objects/: FIoContainerHeader.cs  FIoStoreEntry.cs  FIoStoreTocResource.cs
CUE4Parse/UE4/Objects/Core/Math/: FQuat.cs
CUE4Parse/UE4/Objects/Engine/Curves/: RichCurve.cs
CUE4Parse/UE4/Objects/RenderCore/: FPackedNormal.cs
CUE4Parse/UE4/Objects/UObject/: FNameEntrySerialized.cs  ObjectResource.cs
CUE4Parse/UE4/Pak/: PakEntryStream.cs  PakFileReader.cs
CUE4Parse/UE4/Pak/Objects/: FPakEntry.cs
CUE4Parse/UE4/Readers/: FArchive.cs  FByteArchive.cs  FStreamArchive.cs
CUE4Parse/UE4/Versions/: VersionContainer.cs
CUE4Parse/UE4/VirtualFileSystem/: AbstractAesVfsReader.cs  AbstractVfsReader.cs
CUE4Parse/Utils/: CityHash.cs
